--- a/scss/c4s-p.scss
+++ b/scss/c4s-p.scss
@@ -1,5 +1,5 @@
-@import 'responsive-mixin';
+@import 'responsive';
 
 @media only print {
-  @include responsive-mixin(-p);
+  @include responsive(-p);
 }
