--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -1,19 +1,19 @@
-@import 'modules/functions';
-@import 'modules/variables';
-@import 'modules/padding';
-@import 'modules/margin';
-@import 'modules/width';
-@import 'modules/height';
-@import 'modules/position';
-@import 'modules/display';
-@import 'modules/float';
-@import 'modules/border';
-@import 'modules/border-radius';
-@import 'modules/font-size';
-@import 'modules/line-height';
-@import 'modules/font-weight';
+@import 'responsive/functions';
+@import 'responsive/variables';
+@import 'responsive/padding';
+@import 'responsive/margin';
+@import 'responsive/width';
+@import 'responsive/height';
+@import 'responsive/position';
+@import 'responsive/display';
+@import 'responsive/float';
+@import 'responsive/border';
+@import 'responsive/border-radius';
+@import 'responsive/font-size';
+@import 'responsive/line-height';
+@import 'responsive/font-weight';
 
-@mixin responsive-mixin($media-suffix) {
+@mixin responsive($media-suffix) {
   @include padding      ($media-suffix);
   @include margin       ($media-suffix);
   @include width        ($media-suffix);
