--- a/scss/c4s-h.scss
+++ b/scss/c4s-h.scss
@@ -1,5 +1,5 @@
-@import 'responsive-mixin';
+@import 'responsive';
 
 @media only screen and (min-width: 90em) {
-  @include responsive-mixin(-h);
+  @include responsive(-h);
 }
