--- a/scss/c4s-l.scss
+++ b/scss/c4s-l.scss
@@ -1,5 +1,5 @@
-@import 'responsive-mixin';
+@import 'responsive';
 
 @media only screen and (min-width: 60em) and (max-width: 90em) {
-  @include responsive-mixin(-l);
+  @include responsive(-l);
 }
