--- a/scss/c4s-s.scss
+++ b/scss/c4s-s.scss
@@ -1,5 +1,5 @@
-@import 'responsive-mixin';
+@import 'responsive';
 
 @media only screen and (max-width: 30em) {
-  @include responsive-mixin(-s)
+  @include responsive(-s)
 }
