--- a/scss/c4s-m.scss
+++ b/scss/c4s-m.scss
@@ -1,3 +1,5 @@
+@import 'functions';
+@import 'variables';
 @import 'responsive';
 
 @media only screen and (min-width: 30em) and (max-width: 60em) {
