Small fix in font-weight

--- a/scss/responsive/_font-weight.scss
+++ b/scss/responsive/_font-weight.scss
@@ -9,7 +9,8 @@
 
   // Add extra class for font-weight bold (for brevity)
   .b#{$media-suffix} {
-    font-weight: 700;
+    //font-weight: 700;
+    @extend .fw-bold#{$media-suffix};
   }
 
 }
