--- a/scss/non-responsive/_reset.scss
+++ b/scss/non-responsive/_reset.scss
@@ -1,44 +1,12 @@
-body { margin: 0; }
-
-html,
-body,
-div,
-article,
-aside,
-section,
-main,
-nav,
-footer,
-header,
-form,
-fieldset,
-legend,
-pre,
-code,
-a,
-h1,h2,h3,h4,h5,h6,
-p,
-ul,
-ol,
-li,
-dl,
-dt,
-dd,
-blockquote,
-figcaption,
-figure,
-textarea,
-table,
-td,
-th,
-tr,
-input[type="email"],
-input[type="number"],
-input[type="password"],
-input[type="tel"],
-input[type="text"],
-input[type="url"] {
+body {
+  margin: 0;
   box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
 }
 
 button {
@@ -46,10 +14,8 @@ button {
   font-family: inherit;
 }
 
-img {
-  // Prevent extra space at the bottom of `img` tags
-  display: block;
-}
+// Prevent extra space at the bottom of `img` tags
+img { display: block; }
 
 
 h1, h2, h3, h4, h5, h6 {
@@ -58,34 +24,12 @@ h1, h2, h3, h4, h5, h6 {
   line-height: $line-height-header;
 }
 
-h1 {
-  font-size: $font-size-h1;
-}
+h1    { font-size: $font-size-h1; }
+h2    { font-size: $font-size-h2; }
+h3    { font-size: $font-size-h3; }
+h4    { font-size: $font-size-h4; }
+h5    { font-size: $font-size-h5; }
+h6    { font-size: $font-size-h6; }
+small { font-size: $font-size-small; }
 
-h2 {
-  font-size: $font-size-h2;
-}
-
-h3 {
-  font-size: $font-size-h3;
-}
-
-h4 {
-  font-size: $font-size-h4;
-}
-
-h5 {
-  font-size: $font-size-h5;
-}
-
-h6 {
-  font-size: $font-size-h6;
-}
-
-small {
-  font-size: $font-size-small;
-}
-
-p {
-  line-height: $line-height-text;
-}
+p { line-height: $line-height-text; }
