--- a/scss/c4s-base.scss
+++ b/scss/c4s-base.scss
@@ -28,6 +28,7 @@
 @import 'non-responsive/font-style';
 @import 'non-responsive/text-decoration';
 @import 'non-responsive/text-transform';
+@import 'non-responsive/text-align';
 @import 'non-responsive/box-sizing';
 @import 'non-responsive/cursor';
 @import 'non-responsive/miscellaneous';
