Fix some style issues

--- a/src/non-responsive/_font-family.scss
+++ b/src/non-responsive/_font-family.scss
@@ -1,11 +1,16 @@
 .sans-serif {
   font-family:
-    -apple-system, BlinkMacSystemFont,
-    'avenir next', avenir,
-    'helvetica neue', helvetica,
+    -apple-system,
+    BlinkMacSystemFont,
+    'avenir next',
+    avenir,
+    'helvetica neue',
+    helvetica,
     ubuntu,
-    roboto, noto,
-    'segoe ui', arial,
+    roboto,
+    noto,
+    'segoe ui',
+    arial,
     sans-serif;
 }
 
