--- a/src/responsive/_font-size.scss
+++ b/src/responsive/_font-size.scss
@@ -1,39 +1,39 @@
 @mixin font-size($media-suffix) {
 
   .f-headline#{$media-suffix} {
-    font-size: $font-size-headline
+    font-size: $font-size-headline;
   }
 
   .f-subheadline#{$media-suffix} {
-    font-size: $font-size-subheadline
+    font-size: $font-size-subheadline;
   }
 
   .f1#{$media-suffix} {
-    font-size: $font-size-h1
+    font-size: $font-size-h1;
   }
 
   .f2#{$media-suffix} {
-    font-size: $font-size-h2
+    font-size: $font-size-h2;
   }
 
   .f3#{$media-suffix} {
-    font-size: $font-size-h3
+    font-size: $font-size-h3;
   }
 
   .f4#{$media-suffix} {
-    font-size: $font-size-h4
+    font-size: $font-size-h4;
   }
 
   .f5#{$media-suffix} {
-    font-size: $font-size-h5
+    font-size: $font-size-h5;
   }
 
   .f6#{$media-suffix} {
-    font-size: $font-size-h6
+    font-size: $font-size-h6;
   }
 
   .small#{$media-suffix} {
-    font-size: $font-size-small
+    font-size: $font-size-small;
   }
 
 }
