--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -59,6 +59,9 @@ $black: #000;
 $white: #fff;
 
 $colors: (
+  /*
+     Black/gray/white
+   */
   "black":         $black,
   "near-black":    #111,
   "dark-gray":     #333,
@@ -70,37 +73,49 @@ $colors: (
   "light-gray":    #eee,
   "near-white":    #f4f4f4,
   "white":         $white,
-
+  /*
+     Red
+   */
   "dark-red":      #e7040f,
   "red":           #ff4136,
   "light-red":     #ff725c,
   "washed-red":    #ffdfdf,
-
+  /*
+     Orange/yellow
+   */
   "orange":        #ff6300,
   "gold":          #ffb700,
   "yellow":        #ffd700,
   "light-yellow":  #fbf1a9,
   "washed-yellow": #fffceb,
-
+  /*
+     Purple/pink
+   */
   "purple":        #5e2ca5,
   "light-purple":  #a463f2,
   "dark-pink":     #d5008f,
   "hot-pink":      #ff41b4,
   "pink":          #ff80cc,
   "light-pink":    #ffa3d7,
-
+  /*
+     Green
+   */
   "dark-green":    #137752,
   "green":         #19a974,
   "light-green":   #9eebcf,
   "washed-green":  #e8fdf5,
-
+  /*
+     Blue
+   */
   "navy":          #001b44,
   "dark-blue":     #00449e,
   "blue":          #357edd,
   "light-blue":    #96ccff,
   "lightest-blue": #cdecff,
   "washed-blue":   #f6fffe,
-
+  /*
+     Black opacity variations
+   */
   "black-90":      scale-color($black, $alpha: -10%),
   "black-80":      scale-color($black, $alpha: -20%),
   "black-70":      scale-color($black, $alpha: -30%),
@@ -113,7 +128,9 @@ $colors: (
   "black-05":      scale-color($black, $alpha: -95%),
   "black-025":     scale-color($black, $alpha: -97.5%),
   "black-0125":    scale-color($black, $alpha: -98.75%),
-
+  /*
+     White opacity variations
+   */
   "white-90":      scale-color($white, $alpha: -10%),
   "white-80":      scale-color($white, $alpha: -20%),
   "white-70":      scale-color($white, $alpha: -30%),
