--- a/src/_responsive-all.scss
+++ b/src/_responsive-all.scss
@@ -1,3 +1,10 @@
+/*
+   Responsive imports
+
+   These imports are all mixins that are passed a $media-suffix can thus be used inside
+   media queries targeting specific screen sizes. The media suffix is added to the end of
+   the CSS rules. When there should be no suffix pass an emtpy string.
+ */
 @import 'responsive/padding';
 @import 'responsive/margin';
 @import 'responsive/width';
@@ -15,7 +22,7 @@
 @import 'responsive/tracking';
 @import 'responsive/measure';
 
-@mixin responsive($media-suffix) {
+@mixin responsive-all($media-suffix) {
   @include padding       ($media-suffix);
   @include margin        ($media-suffix);
   @include width         ($media-suffix);
