--- a/src/c4s-base.scss
+++ b/src/c4s-base.scss
@@ -1,35 +1,6 @@
 @import 'functions';
 @import 'variables';
-
-/*
-   'Responsive' import
-
-   NB since the include is not nested in a media query,
-   rules from this mixin will apply to all screen sizes.
-   The include does not have a media suffix (empty string)
- */
-@import 'responsive';
-
-@include responsive('');
-
-/*
-   Non-responsive imports
-
-   These imports are not mixins and therefore do not have
-   media specific suffixes
- */
-@import 'non-responsive/complex';
-@import 'non-responsive/reset';
-@import 'non-responsive/color';
-@import 'non-responsive/hover-color';
-@import 'non-responsive/background-color';
-@import 'non-responsive/hover-background-color';
-@import 'non-responsive/border-color';
-@import 'non-responsive/font-family';
-@import 'non-responsive/font-style';
-@import 'non-responsive/text-decoration';
-@import 'non-responsive/text-transform';
-@import 'non-responsive/text-align';
-@import 'non-responsive/box-sizing';
-@import 'non-responsive/cursor';
-@import 'non-responsive/miscellaneous';
+@import 'responsive-all';
+@import 'non-responsive-all';
+// Include responsive-all mixin with no media suffix
+@include responsive-all('');
