--- a/src/c4s-l.scss
+++ b/src/c4s-l.scss
@@ -4,8 +4,8 @@
 
 @import 'functions';
 @import 'variables';
-@import 'responsive';
+@import 'responsive-all';
 
 @media only screen and (min-width: 60em) and (max-width: 90em) {
-  @include responsive(-l);
+  @include responsive-all(-l);
 }
