--- a/src/c4s-m.scss
+++ b/src/c4s-m.scss
@@ -4,8 +4,8 @@
 
 @import 'functions';
 @import 'variables';
-@import 'responsive';
+@import 'responsive-all';
 
 @media only screen and (min-width: 30em) and (max-width: 60em) {
-  @include responsive(-m);
+  @include responsive-all(-m);
 }
