--- a/src/c4s-s.scss
+++ b/src/c4s-s.scss
@@ -4,8 +4,8 @@
 
 @import 'functions';
 @import 'variables';
-@import 'responsive';
+@import 'responsive-all';
 
 @media only screen and (max-width: 30em) {
-  @include responsive(-s);
+  @include responsive-all(-s);
 }
