--- a/src/c4s-all.scss
+++ b/src/c4s-all.scss
@@ -1,5 +1,5 @@
 /*
-   All viewports combined, include non-responsive styles
+   All viewports combined, including non-responsive styles
  */
 
 @import 'c4s-base';
