Add non-responsive module for transforms

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -64,6 +64,17 @@ $sizer-levels: (
 );
 
 /*
+   TRANSLATE
+ */
+
+$translates: (
+  "-0":    0,
+  "-100":  100%,
+  "-n100": -100%
+);
+
+
+/*
    COLORS
  */
 
