--- a/src/responsive/_coordinates.scss
+++ b/src/responsive/_coordinates.scss
@@ -1,6 +1,6 @@
 @mixin coordinates($media-suffix) {
 
-  @each $level, $value in $trbl-spacer-levels {
+  @each $level, $value in $coordinate-spacer-levels {
     .top#{$level}#{$media-suffix}    { top: $value; }
     .right#{$level}#{$media-suffix}  { right: $value; }
     .bottom#{$level}#{$media-suffix} { bottom: $value; }
