--- a/src/non-responsive/_transform.scss
+++ b/src/non-responsive/_transform.scss
@@ -14,7 +14,7 @@
 
 // Transition transforms
 @each $level, $value in $transition-speeds {
-  .transition-translate#{$level} {
+  .transition-transform#{$level} {
     transition: transform $value ease-in-out;
   }
 }
