Make non-responsive modules compatible with being standalone

--- a/src/modules/non-responsive/box-sizing.scss
+++ b/src/modules/non-responsive/box-sizing.scss
@@ -1,2 +1,5 @@
+@import '../../functions';
+@import '../../variables';
+
 .border-box  { box-sizing: border-box; }
 .content-box { box-sizing: content-box; }
