--- a/src/modules/non-responsive/cursor.scss
+++ b/src/modules/non-responsive/cursor.scss
@@ -1,3 +1,6 @@
+@import '../../functions';
+@import '../../variables';
+
 .cursor-pointer     { cursor: pointer; }
 .cursor-text        { cursor: text; }
 .cursor-none        { cursor: none; }
