--- a/src/modules/non-responsive/text-align.scss
+++ b/src/modules/non-responsive/text-align.scss
@@ -1,3 +1,6 @@
+@import '../../functions';
+@import '../../variables';
+
 .tl { text-align: left; }
 .tr { text-align: right; }
 .tc { text-align: center; }
