--- a/src/modules/non-responsive/transform.scss
+++ b/src/modules/non-responsive/transform.scss
@@ -1,3 +1,6 @@
+@import '../../functions';
+@import '../../variables';
+
 // Translate horizontally
 @each $level, $value in $translate-levels {
   .translateX#{$level} {
