--- a/src/modules/non-responsive/background-color.scss
+++ b/src/modules/non-responsive/background-color.scss
@@ -1,3 +1,6 @@
+@import '../../functions';
+@import '../../variables';
+
 @each $color, $value in $colors {
   .bg-#{$color} { background-color: $value; }
 }
