--- a/src/modules/non-responsive/border-color.scss
+++ b/src/modules/non-responsive/border-color.scss
@@ -1,3 +1,6 @@
+@import '../../functions';
+@import '../../variables';
+
 @each $color, $value in $colors {
   .b--#{$color} { border-color: $value; }
 }
