--- a/src/modules/non-responsive/hover-background-color.scss
+++ b/src/modules/non-responsive/hover-background-color.scss
@@ -1,3 +1,6 @@
+@import '../../functions';
+@import '../../variables';
+
 @each $color, $value in $colors {
   .hover-bg-#{$color}:hover { background-color: $value; }
 }
