--- a/src/modules/non-responsive/hover-color.scss
+++ b/src/modules/non-responsive/hover-color.scss
@@ -1,3 +1,6 @@
+@import '../../functions';
+@import '../../variables';
+
 @each $color, $value in $colors {
   .hover-#{$color}:hover { color: $value; }
 }
