--- a/src/modules/non-responsive/text-transform.scss
+++ b/src/modules/non-responsive/text-transform.scss
@@ -1,2 +1,5 @@
+@import '../../functions';
+@import '../../variables';
+
 .capitalize { text-transform: capitalize; }
 .uppercase  { text-transform: uppercase; }
