Add extra transform levels

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -70,7 +70,9 @@ $sizer-levels: (
 $translate-levels: (
   "-0":    0,
   "-100":  100%,
-  "-n100": -100%
+  "-n100": -100%,
+  "-50":   50%,
+  "-n50":  -50%
 );
 
 /*
