--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -219,9 +219,12 @@ $font-size-small:       $font-size-base * pow($font-scaling-factor, -1);
    LINE HEIGHTS
  */
 
-$line-height-header: 1.15 !default;
-$line-height-text:   1.5 !default;
-$line-height-extra:  2 !default;
+$line-height-levels: (
+  "solid":  1,
+  "header": 1.15,
+  "text":   1.5,
+  "extra":  2
+);
 
 /*
    FONT WEIGHTS
