--- a/src/modules/non-responsive/reset.scss
+++ b/src/modules/non-responsive/reset.scss
@@ -33,7 +33,7 @@ h5,
 h6 {
   margin-top: 2.75rem;
   margin-bottom: 1rem;
-  line-height: $line-height-header;
+  line-height: map-get($line-height-levels, "header");
 }
 
 h1    { font-size: $font-size-h1; }
@@ -44,4 +44,4 @@ h5    { font-size: $font-size-h5; }
 h6    { font-size: $font-size-h6; }
 small { font-size: $font-size-small; }
 
-p { line-height: $line-height-text; }
+p { line-height: map-get($line-height-levels, "text"); }
