--- a/doc/overview.njk
+++ b/doc/overview.njk
@@ -2,69 +2,69 @@
     {% set firstSelector %}{{ selectors | first }}{% endset %}
     {% set firstClass %}{{ firstSelector | getClassFromSelector }}{% endset %}
     {% set readableSelectors %}{{ selectors | join(" or ") }}{% endset %}
-    {% set caption = "Element with " + readableSelectors %}
+    {% set caption = "Element with class " + firstClass %}
 
     {% if type === "complex" %}
 	<div class="dn">
 	    No example found
 	</div>
-    {% elif type == "reset" %}
+    {% elif type === "reset" %}
 	<div class="dn">
 	    No example found
 	</div>
-    {% elif type == "color" %}
+    {% elif type === "color" %}
 	<div class="dn">
 	    No example found
 	</div>
-    {% elif type == "hover-color" %}
+    {% elif type === "hover-color" %}
 	<div class="dn">
 	    No example found
 	</div>
-    {% elif type == "background-color" %}
+    {% elif type === "background-color" %}
 	<div class="dn">
 	    No example found
 	</div>
-    {% elif type == "hover-background-color" %}
+    {% elif type === "hover-background-color" %}
 	<div class="dn">
 	    No example found
 	</div>
-    {% elif type == "border-color" %}
+    {% elif type === "border-color" %}
 	<div class="dn">
 	    No example found
 	</div>
-    {% elif type == "font-family" %}
+    {% elif type === "font-family" %}
 	<div class="dn">
 	    No example found
 	</div>
-    {% elif type == "font-style" %}
+    {% elif type === "font-style" %}
 	<div class="dn">
 	    No example found
 	</div>
-    {% elif type == "text-decoration" %}
+    {% elif type === "text-decoration" %}
 	<div class="dn">
 	    No example found
 	</div>
-    {% elif type == "text-transform" %}
+    {% elif type === "text-transform" %}
 	<div class="dn">
 	    No example found
 	</div>
-    {% elif type == "text-align" %}
+    {% elif type === "text-align" %}
 	<div class="dn">
 	    No example found
 	</div>
-    {% elif type == "transform" %}
+    {% elif type === "transform" %}
 	<div class="dn">
 	    No example found
 	</div>
-    {% elif type == "box-sizing" %}
+    {% elif type === "box-sizing" %}
 	<div class="dn">
 	    No example found
 	</div>
-    {% elif type == "cursor" %}
+    {% elif type === "cursor" %}
 	<div class="dn">
 	    No example found
 	</div>
-    {% elif type == "miscellaneous" %}
+    {% elif type === "miscellaneous" %}
 	<div class="dn">
 	    No example found
 	</div>
@@ -72,23 +72,23 @@
 	<div class="dib white bg-black {{ firstClass }}">
 	    {{ caption }}
 	</div>
-    {% elif type == "margin" %}
+    {% elif type === "margin" %}
 	<div class="dib ba">
             <div class="dib white bg-black {{ firstClass }}">
 		{{ caption }}
             </div>
         </div>
-    {% elif type == "width" %}
+    {% elif type === "width" %}
 	<div class="ba">
 	    <div class="dib white bg-black {{ firstClass }}">
 		{{ caption }}
             </div>
 	</div>
-    {% elif type == "height" %}
+    {% elif type === "height" %}
 	<div class="dib white bg-black {{ firstClass }}">
 	    {{ caption }}
         </div>
-    {% elif type == "position" %}
+    {% elif type === "position" %}
 	{#
 	<div class="relative ba w5 h5">
 	<div class="dib white bg-black top-1 {{ firstClass }}">
@@ -99,13 +99,13 @@
 	<div class="dn">
 	    No example found
 	</div>
-    {% elif type == "coordinates" %}
+    {% elif type === "coordinates" %}
 	<div class="relative ba w5 h5">
 	    <div class="dib white bg-black absolute {{ firstClass }}">
 		{{ caption }}
 	    </div>
 	</div>
-    {% elif type == "display" %}
+    {% elif type === "display" %}
 	{#
 	<div class="bg-black white {{ firstClass }}">
 	{{ caption }}
@@ -114,14 +114,14 @@
 	<div class="dn">
 	    No example found
 	</div>
-    {% elif type == "flex" %}
+    {% elif type === "flex" %}
 	{#
 	TODO: implement
 	#}
 	<div class="dn">
 	    No example found
 	</div>
-    {% elif type == "flex-direction" %}
+    {% elif type === "flex-direction" %}
 	<div class="dif {{ firstClass }}">
 	    {% for i in [1, 2, 3] %}
 		<div class="p2">
@@ -131,35 +131,35 @@
 		</div>
 	    {% endfor %}
 	</div>
-    {% elif type == "float" %}
+    {% elif type === "float" %}
 	<div class="ba w5 h4">
 	    <div class="dib white bg-black {{ firstClass }}">
 		{{ caption }}
 	    </div>
 	</div>
-    {% elif type == "border" %}
+    {% elif type === "border" %}
 	<div class="w5 h3 {{ firstClass }}">
 	    {{ caption }}
 	</div>
-    {% elif type == "border-radius" %}
+    {% elif type === "border-radius" %}
 	<div class="dib p3 ba {{ firstClass }}">
 	    {{ caption }}
 	</div>
-    {% elif type == "font-size" %}
+    {% elif type === "font-size" %}
 	<span class="{{ firstClass }}">
 	    {{ caption }}
 	</span>
-    {% elif type == "line-height" %}
+    {% elif type === "line-height" %}
 	<div class="dib bg-black white">
 	    <span class="{{ firstClass }}">
 		{{ caption }}
 	    </span>
 	</div>
-    {% elif type == "font-weight" %}
+    {% elif type === "font-weight" %}
 	<div class="{{ firstClass }}">
 	    {{ caption }}
 	</div>
-    {% elif type == "white-space" %}
+    {% elif type === "white-space" %}
 	{#
 	<div class="{{ firstClass }}">
 	{{ caption }}
@@ -168,16 +168,16 @@
 	<div class="dn">
 	    No example found
 	</div>
-    {% elif type == "vertical-align" %}
+    {% elif type === "vertical-align" %}
 	<div class="dib bg-black white lh-extra ph2">
 	    <div class="dib bg-red {{ firstClass }}" style="height: .4em; width: .4em;"></div>
 	    {{ caption }}
 	</div>
-    {% elif type == "tracking" %}
+    {% elif type === "tracking" %}
 	<span class="{{ firstClass }}">
 	    {{ caption }}
 	</span>
-    {% elif type == "measure" %}
+    {% elif type === "measure" %}
 	<div class="bg-black white {{ firstClass }}">
 	    {{ caption }}
 	</div>
