Add visibility module

--- a/src/modules/_non-responsive-all.scss
+++ b/src/modules/_non-responsive-all.scss
@@ -17,6 +17,7 @@
 @import 'non-responsive/text-transform';
 @import 'non-responsive/text-align';
 @import 'non-responsive/transform';
+@import 'non-responsive/visibility';
 @import 'non-responsive/box-sizing';
 @import 'non-responsive/cursor';
 @import 'non-responsive/miscellaneous';
