Add module for opacity

--- a/doc/overview.njk
+++ b/doc/overview.njk
@@ -93,6 +93,10 @@
 	<div class="bg-black white p1 {{ firstClass }}">
 	    {{ caption }}
 	</div>
+    {% elif type === "opacity" %}
+	<div class="bg-black white p1 {{ firstClass }}">
+	    {{ caption }}
+	</div>
     {% elif type === "transform" %}
 	<div class="tc">
 	    <div class="dib relative">
