--- a/src/modules/_non-responsive-all.scss
+++ b/src/modules/_non-responsive-all.scss
@@ -16,6 +16,7 @@
 @import 'non-responsive/text-decoration';
 @import 'non-responsive/text-transform';
 @import 'non-responsive/text-align';
+@import 'non-responsive/opacity';
 @import 'non-responsive/transform';
 @import 'non-responsive/visibility';
 @import 'non-responsive/box-sizing';
