--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -177,7 +177,9 @@ $colors: (
   "white-05":      scale-color($white, $alpha: -95%),
   "white-025":     scale-color($white, $alpha: -97.5%),
   "white-0125":    scale-color($white, $alpha: -98.75%),
-
+  /*
+     Transparent
+   */
   "transparent": transparent
 );
 
@@ -244,4 +246,24 @@ $font-weight-levels: (
   "-900":     900,
   "-lighter": lighter,
   "-bolder":  bolder
+);
+
+/*
+   OPACITY LEVELS
+ */
+
+$opacity-levels: (
+  "-100":  1,
+  "-90":   .9,
+  "-80":   .8,
+  "-70":   .7,
+  "-60":   .6,
+  "-50":   .5,
+  "-40":   .4,
+  "-30":   .3,
+  "-20":   .2,
+  "-10":   .1,
+  "-05":   .05,
+  "-025":  .025,
+  "-0":    0
 );
