Fix lint issue in visibility module

--- a/src/modules/non-responsive/visibility.scss
+++ b/src/modules/non-responsive/visibility.scss
@@ -2,7 +2,8 @@
   visibility: visible;
 }
 
-.hidden, .invisible {
+.hidden,
+.invisible {
   visibility: hidden;
 }
 
@@ -10,4 +11,3 @@
 // .collapse {
 //   visibility: collapse;
 // }
-
