Make border module non-responsive

--- a/src/modules/_non-responsive-all.scss
+++ b/src/modules/_non-responsive-all.scss
@@ -10,6 +10,7 @@
 @import 'non-responsive/hover-color';
 @import 'non-responsive/background-color';
 @import 'non-responsive/hover-background-color';
+@import 'non-responsive/border';
 @import 'non-responsive/border-color';
 @import 'non-responsive/font-family';
 @import 'non-responsive/font-style';
