--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -267,3 +267,9 @@ $opacity-levels: (
   "-025":  .025,
   "-0":    0
 );
+
+/*
+   BORDER STYLES
+ */
+
+$border-styles: dotted, dashed, double, groove, ridge, inset, outset;
