--- a/src/modules/_non-responsive-all.scss
+++ b/src/modules/_non-responsive-all.scss
@@ -12,6 +12,7 @@
 @import 'non-responsive/hover-background-color';
 @import 'non-responsive/border';
 @import 'non-responsive/border-color';
+@import 'non-responsive/border-style';
 @import 'non-responsive/font-family';
 @import 'non-responsive/font-style';
 @import 'non-responsive/text-decoration';
