--- a/src/modules/_non-responsive-all.scss
+++ b/src/modules/_non-responsive-all.scss
@@ -11,6 +11,7 @@
 @import 'non-responsive/background-color';
 @import 'non-responsive/hover-background-color';
 @import 'non-responsive/border';
+@import 'non-responsive/border-width';
 @import 'non-responsive/border-color';
 @import 'non-responsive/border-style';
 @import 'non-responsive/font-family';
